// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pages > feedback > should render correctly after feedback has been successfully submitted 1`] = `
<DocumentFragment>
  <div
    class="app-phase-banner__wrapper"
  >
    <div
      class="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
    >
      <p
        class="govuk-phase-banner__content"
      >
        <strong
          class="govuk-tag govuk-phase-banner__content__tag"
        >
          Beta
        </strong>
        <span
          class="govuk-phase-banner__text"
        >
          This is a new service – your 
          <a
            class="govuk-link"
            href="/feedback"
            id="feedback-link"
          >
            feedback
          </a>
           will help us to improve it.
        </span>
      </p>
    </div>
  </div>
  <div
    class="govuk-width-container"
  >
    <button
      class="govuk-back-link mb-7"
      type="button"
    >
      Back
    </button>
    <main
      class="govuk-main-wrapper"
      id="main-content"
    >
      <div
        class="govuk-grid-row"
      >
        <div
          class="govuk-grid-column-two-thirds"
        >
          <form
            action="/api/feedback"
            method="post"
          >
            <input
              name="csrf_token"
              type="hidden"
              value=""
            />
            <div
              class="block p-5 mb-12.5 border-4 border-govGreen"
            >
              <h2
                class="govuk-heading-m"
              >
                Your feedback was submitted
              </h2>
              <p
                class="govuk-body"
              >
                Thank you for taking the time to improve the service
              </p>
              <p
                class="govuk-body"
              >
                <a
                  class="govuk-link"
                  href="/"
                >
                  Click here to return to the homepage
                </a>
              </p>
            </div>
            <h1
              class="govuk-heading-l"
            >
              Help us improve Create Transport Disruption Data
            </h1>
            <span
              class="govuk-hint"
            >
              Thank you for providing feedback and comments. Answer any questions which apply to your experience using Create Transport Disruption Data, and be as specific as possible
            </span>
            <div
              class="govuk-form-group govuk-!-padding-top-3"
            >
              <h1
                class="govuk-label-wrapper"
              >
                <label
                  class="govuk-label govuk-label--m"
                  for="hear-about-service-question"
                >
                  How did you hear about our service?
                </label>
              </h1>
              <textarea
                class="govuk-textarea"
                id="hear-about-service-question"
                name="hearAboutServiceQuestion"
                rows="3"
              />
            </div>
            <div
              class="govuk-form-group govuk-!-padding-top-3"
            >
              <h1
                class="govuk-label-wrapper"
              >
                <label
                  class="govuk-label govuk-label--m"
                  for="general-feedback-question"
                >
                  Please let us know any feedback or suggestions for improvements you may have
                </label>
              </h1>
              <textarea
                class="govuk-textarea"
                id="general-feedback-question"
                name="generalFeedbackQuestion"
                rows="6"
              />
            </div>
            <div
              class="govuk-!-padding-bottom-3"
            >
              <fieldset
                aria-describedby="contact-header"
                class="govuk-fieldset"
              >
                <legend
                  class="govuk-fieldset__legend govuk-fieldset__legend--m"
                  id="contact-header"
                >
                  Did you contact us for assistance at any point?
                </legend>
                <div
                  class="govuk-radios"
                  id="contact-radios"
                >
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="contact-question-yes"
                      name="contactQuestion"
                      type="radio"
                      value="Yes"
                    />
                    <label
                      class="govuk-label govuk-radios__label"
                      for="contact-question-yes"
                    >
                      Yes
                    </label>
                  </div>
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="contact-question-no"
                      name="contactQuestion"
                      type="radio"
                      value="No"
                    />
                    <label
                      class="govuk-label govuk-radios__label"
                      for="contact-question-no"
                    >
                      No
                    </label>
                  </div>
                </div>
              </fieldset>
            </div>
            <div
              class="govuk-!-padding-bottom-6"
            >
              <fieldset
                aria-describedby="problem-header"
                class="govuk-fieldset"
              >
                <legend
                  class="govuk-fieldset__legend govuk-fieldset__legend--m"
                  id="problem-header"
                >
                  Did we solve your problem?
                </legend>
                <div
                  class="govuk-radios"
                  id="problem-radios"
                >
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="problem-question-yes"
                      name="problemQuestion"
                      type="radio"
                      value="Yes"
                    />
                    <label
                      class="govuk-label govuk-radios__label"
                      for="problem-question-yes"
                    >
                      Yes
                    </label>
                  </div>
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="problem-question-no"
                      name="problemQuestion"
                      type="radio"
                      value="No"
                    />
                    <label
                      class="govuk-label govuk-radios__label"
                      for="problem-question-no"
                    >
                      No
                    </label>
                  </div>
                </div>
              </fieldset>
            </div>
            <button
              class="govuk-button"
              data-module="govuk-button"
              id="continue-button"
            >
              Submit
            </button>
          </form>
        </div>
      </div>
    </main>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        class="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link: 
        <a
          class="govuk-link govuk-!-font-size-19"
          href="/contact"
        >
          Contact us
        </a>
      </p>
    </div>
  </div>
  <footer
    class="govuk-footer"
    role="contentinfo"
  >
    <div
      class="govuk-width-container"
    >
      <div
        class="govuk-footer__meta"
      >
        <div
          class="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            class="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            class="govuk-footer__inline-list"
          >
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Help
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/cookies"
              >
                Cookies
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
              >
                Terms and conditions
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/privacy"
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            class="govuk-footer__body"
          >
            Built by the 
            <a
              class="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            class="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            class="govuk-footer__licence-description"
          >
            All content is available under the 
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          class="govuk-footer__meta-item"
        >
          <a
            class="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`pages > feedback > should render correctly after the user tries to submit no feedback 1`] = `
<DocumentFragment>
  <div
    class="app-phase-banner__wrapper"
  >
    <div
      class="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
    >
      <p
        class="govuk-phase-banner__content"
      >
        <strong
          class="govuk-tag govuk-phase-banner__content__tag"
        >
          Beta
        </strong>
        <span
          class="govuk-phase-banner__text"
        >
          This is a new service – your 
          <a
            class="govuk-link"
            href="/feedback"
            id="feedback-link"
          >
            feedback
          </a>
           will help us to improve it.
        </span>
      </p>
    </div>
  </div>
  <div
    class="govuk-width-container"
  >
    <button
      class="govuk-back-link mb-7"
      type="button"
    >
      Back
    </button>
    <main
      class="govuk-main-wrapper"
      id="main-content"
    >
      <div
        class="govuk-grid-row"
      >
        <div
          class="govuk-grid-column-two-thirds"
        >
          <form
            action="/api/feedback"
            method="post"
          >
            <input
              name="csrf_token"
              type="hidden"
              value=""
            />
            <div
              class="block p-5 mb-12.5 border-4 border-govRed"
            >
              <h2
                class="govuk-heading-m"
              >
                Your feedback was not submitted
              </h2>
              <p
                class="govuk-body"
              >
                The feedback form was empty, at least one question has to be answered
              </p>
              <p
                class="govuk-body"
              >
                <a
                  class="govuk-link"
                  href="/"
                >
                  Click here to return to the homepage
                </a>
              </p>
            </div>
            <h1
              class="govuk-heading-l"
            >
              Help us improve Create Transport Disruption Data
            </h1>
            <span
              class="govuk-hint"
            >
              Thank you for providing feedback and comments. Answer any questions which apply to your experience using Create Transport Disruption Data, and be as specific as possible
            </span>
            <div
              class="govuk-form-group govuk-!-padding-top-3"
            >
              <h1
                class="govuk-label-wrapper"
              >
                <label
                  class="govuk-label govuk-label--m"
                  for="hear-about-service-question"
                >
                  How did you hear about our service?
                </label>
              </h1>
              <textarea
                class="govuk-textarea"
                id="hear-about-service-question"
                name="hearAboutServiceQuestion"
                rows="3"
              />
            </div>
            <div
              class="govuk-form-group govuk-!-padding-top-3"
            >
              <h1
                class="govuk-label-wrapper"
              >
                <label
                  class="govuk-label govuk-label--m"
                  for="general-feedback-question"
                >
                  Please let us know any feedback or suggestions for improvements you may have
                </label>
              </h1>
              <textarea
                class="govuk-textarea"
                id="general-feedback-question"
                name="generalFeedbackQuestion"
                rows="6"
              />
            </div>
            <div
              class="govuk-!-padding-bottom-3"
            >
              <fieldset
                aria-describedby="contact-header"
                class="govuk-fieldset"
              >
                <legend
                  class="govuk-fieldset__legend govuk-fieldset__legend--m"
                  id="contact-header"
                >
                  Did you contact us for assistance at any point?
                </legend>
                <div
                  class="govuk-radios"
                  id="contact-radios"
                >
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="contact-question-yes"
                      name="contactQuestion"
                      type="radio"
                      value="Yes"
                    />
                    <label
                      class="govuk-label govuk-radios__label"
                      for="contact-question-yes"
                    >
                      Yes
                    </label>
                  </div>
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="contact-question-no"
                      name="contactQuestion"
                      type="radio"
                      value="No"
                    />
                    <label
                      class="govuk-label govuk-radios__label"
                      for="contact-question-no"
                    >
                      No
                    </label>
                  </div>
                </div>
              </fieldset>
            </div>
            <div
              class="govuk-!-padding-bottom-6"
            >
              <fieldset
                aria-describedby="problem-header"
                class="govuk-fieldset"
              >
                <legend
                  class="govuk-fieldset__legend govuk-fieldset__legend--m"
                  id="problem-header"
                >
                  Did we solve your problem?
                </legend>
                <div
                  class="govuk-radios"
                  id="problem-radios"
                >
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="problem-question-yes"
                      name="problemQuestion"
                      type="radio"
                      value="Yes"
                    />
                    <label
                      class="govuk-label govuk-radios__label"
                      for="problem-question-yes"
                    >
                      Yes
                    </label>
                  </div>
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="problem-question-no"
                      name="problemQuestion"
                      type="radio"
                      value="No"
                    />
                    <label
                      class="govuk-label govuk-radios__label"
                      for="problem-question-no"
                    >
                      No
                    </label>
                  </div>
                </div>
              </fieldset>
            </div>
            <button
              class="govuk-button"
              data-module="govuk-button"
              id="continue-button"
            >
              Submit
            </button>
          </form>
        </div>
      </div>
    </main>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        class="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link: 
        <a
          class="govuk-link govuk-!-font-size-19"
          href="/contact"
        >
          Contact us
        </a>
      </p>
    </div>
  </div>
  <footer
    class="govuk-footer"
    role="contentinfo"
  >
    <div
      class="govuk-width-container"
    >
      <div
        class="govuk-footer__meta"
      >
        <div
          class="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            class="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            class="govuk-footer__inline-list"
          >
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Help
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/cookies"
              >
                Cookies
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
              >
                Terms and conditions
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/privacy"
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            class="govuk-footer__body"
          >
            Built by the 
            <a
              class="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            class="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            class="govuk-footer__licence-description"
          >
            All content is available under the 
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          class="govuk-footer__meta-item"
        >
          <a
            class="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`pages > feedback > should render correctly when the page is first visited 1`] = `
<DocumentFragment>
  <div
    class="app-phase-banner__wrapper"
  >
    <div
      class="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
    >
      <p
        class="govuk-phase-banner__content"
      >
        <strong
          class="govuk-tag govuk-phase-banner__content__tag"
        >
          Beta
        </strong>
        <span
          class="govuk-phase-banner__text"
        >
          This is a new service – your 
          <a
            class="govuk-link"
            href="/feedback"
            id="feedback-link"
          >
            feedback
          </a>
           will help us to improve it.
        </span>
      </p>
    </div>
  </div>
  <div
    class="govuk-width-container"
  >
    <button
      class="govuk-back-link mb-7"
      type="button"
    >
      Back
    </button>
    <main
      class="govuk-main-wrapper"
      id="main-content"
    >
      <div
        class="govuk-grid-row"
      >
        <div
          class="govuk-grid-column-two-thirds"
        >
          <form
            action="/api/feedback"
            method="post"
          >
            <input
              name="csrf_token"
              type="hidden"
              value=""
            />
            <h1
              class="govuk-heading-l"
            >
              Help us improve Create Transport Disruption Data
            </h1>
            <span
              class="govuk-hint"
            >
              Thank you for providing feedback and comments. Answer any questions which apply to your experience using Create Transport Disruption Data, and be as specific as possible
            </span>
            <div
              class="govuk-form-group govuk-!-padding-top-3"
            >
              <h1
                class="govuk-label-wrapper"
              >
                <label
                  class="govuk-label govuk-label--m"
                  for="hear-about-service-question"
                >
                  How did you hear about our service?
                </label>
              </h1>
              <textarea
                class="govuk-textarea"
                id="hear-about-service-question"
                name="hearAboutServiceQuestion"
                rows="3"
              />
            </div>
            <div
              class="govuk-form-group govuk-!-padding-top-3"
            >
              <h1
                class="govuk-label-wrapper"
              >
                <label
                  class="govuk-label govuk-label--m"
                  for="general-feedback-question"
                >
                  Please let us know any feedback or suggestions for improvements you may have
                </label>
              </h1>
              <textarea
                class="govuk-textarea"
                id="general-feedback-question"
                name="generalFeedbackQuestion"
                rows="6"
              />
            </div>
            <div
              class="govuk-!-padding-bottom-3"
            >
              <fieldset
                aria-describedby="contact-header"
                class="govuk-fieldset"
              >
                <legend
                  class="govuk-fieldset__legend govuk-fieldset__legend--m"
                  id="contact-header"
                >
                  Did you contact us for assistance at any point?
                </legend>
                <div
                  class="govuk-radios"
                  id="contact-radios"
                >
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="contact-question-yes"
                      name="contactQuestion"
                      type="radio"
                      value="Yes"
                    />
                    <label
                      class="govuk-label govuk-radios__label"
                      for="contact-question-yes"
                    >
                      Yes
                    </label>
                  </div>
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="contact-question-no"
                      name="contactQuestion"
                      type="radio"
                      value="No"
                    />
                    <label
                      class="govuk-label govuk-radios__label"
                      for="contact-question-no"
                    >
                      No
                    </label>
                  </div>
                </div>
              </fieldset>
            </div>
            <div
              class="govuk-!-padding-bottom-6"
            >
              <fieldset
                aria-describedby="problem-header"
                class="govuk-fieldset"
              >
                <legend
                  class="govuk-fieldset__legend govuk-fieldset__legend--m"
                  id="problem-header"
                >
                  Did we solve your problem?
                </legend>
                <div
                  class="govuk-radios"
                  id="problem-radios"
                >
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="problem-question-yes"
                      name="problemQuestion"
                      type="radio"
                      value="Yes"
                    />
                    <label
                      class="govuk-label govuk-radios__label"
                      for="problem-question-yes"
                    >
                      Yes
                    </label>
                  </div>
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="problem-question-no"
                      name="problemQuestion"
                      type="radio"
                      value="No"
                    />
                    <label
                      class="govuk-label govuk-radios__label"
                      for="problem-question-no"
                    >
                      No
                    </label>
                  </div>
                </div>
              </fieldset>
            </div>
            <button
              class="govuk-button"
              data-module="govuk-button"
              id="continue-button"
            >
              Submit
            </button>
          </form>
        </div>
      </div>
    </main>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        class="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link: 
        <a
          class="govuk-link govuk-!-font-size-19"
          href="/contact"
        >
          Contact us
        </a>
      </p>
    </div>
  </div>
  <footer
    class="govuk-footer"
    role="contentinfo"
  >
    <div
      class="govuk-width-container"
    >
      <div
        class="govuk-footer__meta"
      >
        <div
          class="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            class="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            class="govuk-footer__inline-list"
          >
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Help
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/cookies"
              >
                Cookies
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
              >
                Terms and conditions
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/privacy"
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            class="govuk-footer__body"
          >
            Built by the 
            <a
              class="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            class="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            class="govuk-footer__licence-description"
          >
            All content is available under the 
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          class="govuk-footer__meta-item"
        >
          <a
            class="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;
